<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cenapred.gob.mx.holamundo.QuintaActivity"
    tools:showIn="@layout/activity_quinta">

    <ImageView
        android:id="@+id/imgAct5"
        android:layout_width="200sp"
        android:layout_height="300sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/imgAct5"
        android:src="@drawable/prueba1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/txvAct5"
        android:layout_alignTop="@+id/imgAct5"
        android:layout_toRightOf="@+id/imgAct5"
        android:layout_toEndOf="@+id/imgAct5"
        android:layout_marginTop="77dp" />
    <Button
        android:id="@+id/btnAct5Imagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imgAct5"
        android:text="@string/btnAct5Imagen" />

    <Button
        android:id="@+id/btnAct5Txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAct5Texto"
        android:layout_below="@+id/imgAct5"
        android:layout_alignLeft="@+id/txvAct5"
        android:layout_alignStart="@+id/txvAct5" />
</RelativeLayout>
